fuzzer/go/data/testdata/stacktrace/7bad_debug.err
Decoding
../../src/core/SkPictureData.cpp:362: fatal error: ""nullptr == fOpData""
